Code to demonstrate thred starvation through JMC